nowy uklad zajac

--- a/02_podstawy/basic.ipynb
+++ b/02_podstawy/basic.ipynb
@@ -53,7 +53,7 @@
     "tags": []
    },
    "source": [
-    "# Wykres punktowy\n",
+    "## Wykres punktowy\n",
     "\n",
     "scatter"
    ]
@@ -103,12 +103,12 @@
     "tags": []
    },
    "source": [
-    "# Zmienne wizualne obsługiwane w wykresie scatter\n",
+    "#### Zmienne wizualne obsługiwane w wykresie scatter\n",
     "\n",
-    "## Iterowalne\n",
+    "#### Iterowalne\n",
     "- rozmiar (s)\n",
     "- kolor (wypełnienie i krawędzie)\n",
-    "## Pojedyncze\n",
+    "#### Pojedyncze\n",
     "- przeźroczystość\n",
     "- marker \n",
     "\n",
