kdodano zadania do drógich ćwiczeń

--- a/02_podstawy_sbymbologia/cwiczenia_seaborn.ipynb
+++ b/02_podstawy_sbymbologia/cwiczenia_seaborn.ipynb
@@ -354,6 +354,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Praca własna:\n",
+    "\n",
+    "Zmodyfikować listę kolorów, tak aby kolory ciepłe były przypisane do ciepłych miesięcy a zimne do zimnych\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ćwiczenie 2 rekonstrukcja boxplotu\n",
     "\n",
     "Seaborn często korzysta z palet niedostępnych w matplotlib. Tu użyjemy palety \"hsv\", która dostępna jest również w matplotlib. Dodatkowo seaborn korzysta z obniżonej saturacji w palet, która nie jest osiągalna w matplotlib prostym parametrem."
@@ -430,6 +439,15 @@
     "    #patch.set(facecolor=color)\n",
     "    plt.setp(patch,facecolor=color)\n",
     "_ = ax.set_xlabel(\"month\") # aby nie wyświetalć tekstów"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Praca własna\n",
+    "\n",
+    "Zmodyfikować kolorystykę linii i pól wykresów na własną listę kolorów"
    ]
   },
   {
@@ -531,11 +549,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Praca własna\n",
+    "\n",
+    "Zmodyfikować kod, tak aby bars nie nakładały się na siebie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Wykresy złożone\n",
     "\n",
     "Wykres na poziomie sns będzie wymagał dodatkowych działań, związanych z formatowaniem niedostępnym z poziomu seaborn.\n",
     "\n",
-    "**UWAGA**: nie wszystkie elementy legendy da się oddtworzyć w matplotlib (zbyt złożone)"
+    "**UWAGA**: nie wszystkie elementy legendy da się oddtworzyć w matplotlib (zbyt złożone)\n",
+    "\n",
+    "### Praca własna\n",
+    "\n",
+    "Kod wykresu do samodzielnej analizy"
    ]
   },
   {
